client/tests/snapshots/query_tests__query_services_returns_registry_entries.snap
---
source: client/tests/query_tests.rs
expression: recorder.requests()
---
- method: POST
  path_and_query: /graphql
  body:
    Json:
      query: "query QueryServices($serviceType: String, $node: String) {\n  services(serviceType: $serviceType, node: $node) {\n    __typename\n    ... on ServicesList {\n      services {\n        serviceType\n        node\n        safe\n        metadata\n        registeredAt\n        updatedAt\n      }\n    }\n    ... on MissingFilterError {\n      __typename\n      code\n      message\n    }\n    ... on QueryFailedError {\n      __typename\n      message\n      code\n    }\n  }\n}\n"
      variables:
        serviceType: "0x6776706e3a657869740000000000000000000000000000000000000000000000"
        node: ~
      operationName: QueryServices
