client/tests/snapshots/query_tests__query_token_balance.snap
---
source: client/tests/query_tests.rs
expression: recorder.requests()
---
- method: POST
  path_and_query: /graphql
  body:
    Json:
      query: "query QueryHoprBalance($address: String!, $token: Token) {\n  hoprBalance(address: $address, token: $token) {\n    __typename\n    ... on HoprBalance {\n      __typename\n      balance\n    }\n    ... on InvalidAddressError {\n      __typename\n      code\n      message\n    }\n    ... on QueryFailedError {\n      __typename\n      message\n      code\n    }\n  }\n}\n"
      variables:
        address: "0101010101010101010101010101010101010101"
        token: HOPR
      operationName: QueryHoprBalance
